correct spacing of wizard step indicators

--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/ProgressPanel/ProgressPanel.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/ProgressPanel/ProgressPanel.module.css
@@ -10,4 +10,8 @@
   >* {
     flex: 1;
   }
+
+  >*:last-child {
+    flex: none;
+  }
 }
